feat: Apply ethereal deep tones with radial gradient background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #0f172a; /* slate-900 */
+        background: radial-gradient(circle at center, #1a1f2e 0%, #0a0b10 100%);
         color: #e2e8f0;
       }
       /* Custom Scrollbar for the feed */
